# EdgeDroid2

./: .dockerignore  .gitignore  404.html  Dockerfile  Dockerfile.client  Dockerfile.dlib  Dockerfile.server  MANIFEST.in  Makefile  README.md  demo.py  docker-compose.yml  index.html  latin_sqr_0.csv  mkdocs.yml  pyproject.toml  requirements.txt  requirements_ttf_tests.txt  scaling_ttf.ipynb  setup.cfg  setup.py  show_frames.py  ttf_tests.ipynb
.github/: scaling_ttf.ipynb
.github/workflows/: ci.yml  gh-pages.yml
analysis/: energy_Nov3.ipynb  generate_scaling_rtt_results.ipynb  generate_scaling_ttf_results.ipynb  generate_verification_data.py  goodness_of_fit.py.ipynb  junjues_sampling.ipynb  models.ipynb  neuroticism.ipynb  plot_final_samplng_Nov5.ipynb  plot_scaling_ttf_results.ipynb  requirements.txt  sampling_Nov5.ipynb  sampling_comp2.ipynb  sampling_comp3.ipynb  sampling_util.py  scaling_rtt_sampling.ipynb  scaling_rtt_sampling_detail.ipynb  scaling_ttf.ipynb  scaling_ttf_sampling.ipynb  state_distributions.ipynb  steps2022_full.parquet  test_rolling_average.ipynb  verification.ipynb  verification_Sep21.ipynb  verify_models.ipynb
analysis/verification/: duration.parquet  transitions.parquet  ttf.parquet
docs/: CNAME
docs_docker/: Dockerfile  docker-compose.yml
edgedroid/: __init__.py  execution_times.py  frames.py  model.py  trace_fetch.py  util.py  version.py
edgedroid/data/: __init__.py  load.py
edgedroid/data/exec_times/: model_exec_times.parquet
edgedroid/data/resources/: default_bins.npz  frame_probabilities.csv  frame_probabilitites.csv  model_exec_times.parquet  square00.npz  square01.npz  square02.npz  square03.npz  square04.npz  square05.npz  square06.npz  square07.npz  square08.npz  square09.npz  square10.npz  square11.npz  test.npz
edgedroid/load_generator/: __init__.py  client.py  common.py  common_cli.py  server.py  tools_cli.py
edgedroid/load_generator/client/: __init__.py  cli.py  client.py
edgedroid/load_generator/server/: __init__.py  cli.py  server.py
edgedroid/models/: __init__.py  frames.py  timings.py
edgedroid/models/sampling/: __init__.py  adaptive.py  base.py
edgedroid/tests/: __init__.py  test_cli.py  test_end_to_end.py  test_execution_times.py  test_frame_model.py  test_load_generator.py
edgedroid/tests/resources/: adaptive_test_cases.npz
experiments/: 1  Dockerfile  Makefile  common.py  entrypoint_client.sh  entrypoint_server.sh  experiment_client.py  experiment_server.py  experiments.py  fetch_traces.py  requirements.txt  upload_files.py
tests/: test_execution_times.py  test_frame_model.py
