[metadata]
name = edgedroid
author = Manuel Olguín Muñoz
author_email = molguin@kth.se
version = attr: edgedroid.version.__version__
description = Library for human behavior modeling in the context of step-based Cognitive Assistance.
long_description = file: README.md, LICENSE
keywords =
    emulation
    modeling
    research
license = Apache License v2
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.10
    Topic :: System :: Emulators
    Topic :: System :: Distributed Computing

[options]
packages =
    edgedroid
include_package_data = True
install_requires =
    numpy
    pandas
    pyarrow
    scipy
    opencv-python
    pooch
    loguru
    pyyaml

[options.extras_require]
test =
    gabriel_lego @ git+https://github.com/molguin92/gabriel-lego-py3@master#egg=gabriel_lego
    tqdm
load-client =
    click
load-server =
    gabriel_lego @ git+https://github.com/molguin92/gabriel-lego-py3@master#egg=gabriel_lego
    click
dev =
    black
    %(test)s
    %(load-client)s
    %(load-server)s


