[metadata]
name = edgedroid
author = Manuel Olguín Muñoz
author_email = molguin@kth.se
version = attr: edgedroid.version.__version__
description = Library for human behavior modeling in the context of step-based Cognitive Assistance.
long_description = file: README.md, LICENSE
keywords =
    emulation
    modeling
    research
license = Apache License v2
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.10
    Topic :: System :: Emulators
    Topic :: System :: Distributed Computing

[options]
packages =
    edgedroid
python_requires = >= 3.9
include_package_data = True
install_requires =
    numpy
    pandas
    pyarrow
    scipy
    opencv-contrib-python
    pooch
    tqdm
    loguru
    pyyaml

[options.entry_points]
console_scripts =
    edgedroid-client = edgedroid.load_generator.client:edgedroid_client [load-client]
    edgedroid-server = edgedroid.load_generator.server:edgedroid_server [load-server]
    edgedroid-tools = edgedroid.load_generator.tools_cli:edgedroid_tools [cli]

[options.extras_require]
cli =
    click
    pooch
    tqdm
    loguru
load-client =
    %(cli)s
load-server =
    %(cli)s
    gabriel_lego @ git+https://github.com/molguin92/gabriel-lego-py3@master#egg=gabriel_lego
test =
    %(load-client)s
    %(load-server)s
dev =
    black
    jupyter
    notebook
    jupyterlab
    matplotlib
    seaborn
    %(test)s
    %(load-client)s
    %(load-server)s
all =
    %(load-client)s
    %(load-server)s
    %(test)s
    %(dev)s
