[metadata]
name = edgedroid
author = Manuel Olguín Muñoz
author_email = molguin@kth.se
version = attr: edgedroid.version.__version__
description = Library for human behavior modeling in the context of step-based Cognitive Assistance.
long_description = file: README.md, LICENSE
keywords =
    emulation
    modeling
    research
license = Apache License v2
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.10
    Topic :: System :: Emulators
    Topic :: System :: Distributed Computing

[options]
packages =
    edgedroid
python_requires = >= 3.10
# 3.10 since we use match!!
include_package_data = True
install_requires =
    numpy
    pandas
    pyarrow
    scipy
    opencv-contrib-python
    pooch
    tqdm
    loguru
    pyyaml

[options.entry_points]
console_scripts =
    edgedroid-fetch-all-traces = edgedroid.trace_fetch:fetch_all_traces

[options.extras_require]
dev =
    black
    jupyter
    notebook
    jupyterlab
    matplotlib
    seaborn
